// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component created should render the component 1`] = `
<DocumentFragment>
  <div
    class="mantine-Container-root mantine-15pjuqq"
  >
    <form>
      <div
        class="mantine-Container-root mantine-15pjuqq"
      >
        <h1
          class="mantine-Text-root mantine-Title-root mantine-dyfpg1"
        >
          Opt In Form
        </h1>
        <div
          class="mantine-Divider-root mantine-Divider-horizontal mantine-polw48"
          role="separator"
        />
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-1l2unfb"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-r0"
            id="mantine-r0-label"
          >
            Name
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
              id="mantine-r0"
              placeholder="Something to remember, like fever"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-1l2unfb"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-r1"
            id="mantine-r1-label"
          >
            Interval in days
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-NumberInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-fxjyvm"
              id="mantine-r1"
              inputmode="numeric"
              step="1"
              type="text"
              value="7"
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-1l2unfb"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-r2"
            id="mantine-r2-label"
          >
            Number of Deliveries
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-NumberInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-fxjyvm"
              id="mantine-r2"
              inputmode="numeric"
              step="1"
              type="text"
              value="3"
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-DatePicker-root mantine-1m3pqry"
        >
          <label
            class="mantine-InputWrapper-label mantine-DatePicker-label mantine-ittua2"
            for="mantine-r3"
            id="mantine-r3-label"
          >
            Delivery Date
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-DatePicker-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-2uofp0 mantine-DatePicker-wrapper"
          >
            <div
              class="mantine-Input-wrapper mantine-DatePicker-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="mantine-DatePicker-input mantine-Input-input mantine-DatePicker-input mantine-1v3u1sh"
                id="mantine-r3"
                name="date"
                placeholder="Pick date"
                readonly=""
                value="January 4, 2020"
              />
              <div
                class="mantine-163ph1f mantine-Input-rightSection mantine-DatePicker-rightSection"
              >
                <button
                  class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-tzgcu0"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="mantine-a9v14h"
          />
          <div
            class="mantine-Text-root mantine-1pbxw0k"
          >
            Address
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-r5"
              id="mantine-r5-label"
            >
              Street
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-r5"
                placeholder="Street"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-r6"
              id="mantine-r6-label"
            >
              City
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-r6"
                placeholder="City"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-r7"
              id="mantine-r7-label"
            >
              State
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-r7"
                placeholder="State"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-r8"
              id="mantine-r8-label"
            >
              Country
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-r8"
                placeholder="Country"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-r9"
              id="mantine-r9-label"
            >
              Pincode
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-r9"
                placeholder="PinCode"
                type="number"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          class="mantine-UnstyledButton-root mantine-Button-root mantine-axde23"
          data-button="true"
          type="submit"
        >
          <div
            class="mantine-3xbgk5 mantine-Button-inner"
          >
            <span
              class="mantine-qo1k2 mantine-Button-label"
            >
              Place Order
            </span>
          </div>
        </button>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          No data Here!
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`component created should render the handle create call 1`] = `
<DocumentFragment>
  <div
    class="mantine-Container-root mantine-15pjuqq"
  >
    <form>
      <div
        class="mantine-Container-root mantine-15pjuqq"
      >
        <h1
          class="mantine-Text-root mantine-Title-root mantine-dyfpg1"
        >
          Opt In Form
        </h1>
        <div
          class="mantine-Divider-root mantine-Divider-horizontal mantine-polw48"
          role="separator"
        />
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-1l2unfb"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-ra"
            id="mantine-ra-label"
          >
            Name
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-cfhfuz"
          >
            <input
              aria-invalid="true"
              class="mantine-Input-input mantine-TextInput-input mantine-Input-invalid mantine-TextInput-invalid mantine-1nvi3eg"
              id="mantine-ra"
              placeholder="Something to remember, like fever"
              type="text"
              value=""
            />
          </div>
          <div
            class="mantine-Text-root mantine-InputWrapper-error mantine-TextInput-error mantine-1oc5s83"
            role="alert"
          >
            Name must have at least 2 letters
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-1l2unfb"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-rb"
            id="mantine-rb-label"
          >
            Interval in days
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-NumberInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-fxjyvm"
              id="mantine-rb"
              inputmode="numeric"
              step="1"
              type="text"
              value="7"
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-1l2unfb"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-rc"
            id="mantine-rc-label"
          >
            Number of Deliveries
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-NumberInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-fxjyvm"
              id="mantine-rc"
              inputmode="numeric"
              step="1"
              type="text"
              value="3"
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-DatePicker-root mantine-1m3pqry"
        >
          <label
            class="mantine-InputWrapper-label mantine-DatePicker-label mantine-ittua2"
            for="mantine-rd"
            id="mantine-rd-label"
          >
            Delivery Date
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-DatePicker-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-2uofp0 mantine-DatePicker-wrapper"
          >
            <div
              class="mantine-Input-wrapper mantine-DatePicker-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="mantine-DatePicker-input mantine-Input-input mantine-DatePicker-input mantine-1v3u1sh"
                id="mantine-rd"
                name="date"
                placeholder="Pick date"
                readonly=""
                value="January 4, 2020"
              />
              <div
                class="mantine-163ph1f mantine-Input-rightSection mantine-DatePicker-rightSection"
              >
                <button
                  class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-tzgcu0"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="mantine-a9v14h"
          />
          <div
            class="mantine-Text-root mantine-1pbxw0k"
          >
            Address
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-rf"
              id="mantine-rf-label"
            >
              Street
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-cfhfuz"
            >
              <input
                aria-invalid="true"
                class="mantine-Input-input mantine-TextInput-input mantine-Input-invalid mantine-TextInput-invalid mantine-1nvi3eg"
                id="mantine-rf"
                placeholder="Street"
                type="text"
                value=""
              />
            </div>
            <div
              class="mantine-Text-root mantine-InputWrapper-error mantine-TextInput-error mantine-1oc5s83"
              role="alert"
            >
              This field is required!
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-rg"
              id="mantine-rg-label"
            >
              City
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-cfhfuz"
            >
              <input
                aria-invalid="true"
                class="mantine-Input-input mantine-TextInput-input mantine-Input-invalid mantine-TextInput-invalid mantine-1nvi3eg"
                id="mantine-rg"
                placeholder="City"
                type="text"
                value=""
              />
            </div>
            <div
              class="mantine-Text-root mantine-InputWrapper-error mantine-TextInput-error mantine-1oc5s83"
              role="alert"
            >
              This field is required!
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-rh"
              id="mantine-rh-label"
            >
              State
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-cfhfuz"
            >
              <input
                aria-invalid="true"
                class="mantine-Input-input mantine-TextInput-input mantine-Input-invalid mantine-TextInput-invalid mantine-1nvi3eg"
                id="mantine-rh"
                placeholder="State"
                type="text"
                value=""
              />
            </div>
            <div
              class="mantine-Text-root mantine-InputWrapper-error mantine-TextInput-error mantine-1oc5s83"
              role="alert"
            >
              This field is required!
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-ri"
              id="mantine-ri-label"
            >
              Country
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-cfhfuz"
            >
              <input
                aria-invalid="true"
                class="mantine-Input-input mantine-TextInput-input mantine-Input-invalid mantine-TextInput-invalid mantine-1nvi3eg"
                id="mantine-ri"
                placeholder="Country"
                type="text"
                value=""
              />
            </div>
            <div
              class="mantine-Text-root mantine-InputWrapper-error mantine-TextInput-error mantine-1oc5s83"
              role="alert"
            >
              This field is required!
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-rj"
              id="mantine-rj-label"
            >
              Pincode
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-cfhfuz"
            >
              <input
                aria-invalid="true"
                class="mantine-Input-input mantine-TextInput-input mantine-Input-invalid mantine-TextInput-invalid mantine-1nvi3eg"
                id="mantine-rj"
                placeholder="PinCode"
                type="number"
                value=""
              />
            </div>
            <div
              class="mantine-Text-root mantine-InputWrapper-error mantine-TextInput-error mantine-1oc5s83"
              role="alert"
            >
              Valid Pincode is required!
            </div>
          </div>
        </div>
        <button
          class="mantine-UnstyledButton-root mantine-Button-root mantine-axde23"
          data-button="true"
          type="submit"
        >
          <div
            class="mantine-3xbgk5 mantine-Button-inner"
          >
            <span
              class="mantine-qo1k2 mantine-Button-label"
            >
              Place Order
            </span>
          </div>
        </button>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          No data Here!
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`component created should render the handle create call 2`] = `
<DocumentFragment>
  <div
    class="mantine-Container-root mantine-15pjuqq"
  >
    <form>
      <div
        class="mantine-Container-root mantine-15pjuqq"
      >
        <h1
          class="mantine-Text-root mantine-Title-root mantine-dyfpg1"
        >
          Opt In Form
        </h1>
        <div
          class="mantine-Divider-root mantine-Divider-horizontal mantine-polw48"
          role="separator"
        />
        <div
          class="mantine-InputWrapper-root mantine-TextInput-root mantine-1l2unfb"
        >
          <label
            class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
            for="mantine-ra"
            id="mantine-ra-label"
          >
            Name
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
              id="mantine-ra"
              placeholder="Something to remember, like fever"
              type="text"
              value="name1"
            />
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-1l2unfb"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-rb"
            id="mantine-rb-label"
          >
            Interval in days
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-NumberInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-fxjyvm"
              id="mantine-rb"
              inputmode="numeric"
              step="1"
              type="text"
              value="5"
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-NumberInput-root mantine-1l2unfb"
        >
          <label
            class="mantine-InputWrapper-label mantine-NumberInput-label mantine-ittua2"
            for="mantine-rc"
            id="mantine-rc-label"
          >
            Number of Deliveries
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-NumberInput-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-Input-wrapper mantine-NumberInput-wrapper mantine-12sbrde"
          >
            <input
              aria-invalid="false"
              class="mantine-Input-input mantine-NumberInput-input mantine-fxjyvm"
              id="mantine-rc"
              inputmode="numeric"
              step="1"
              type="text"
              value="5"
            />
            <div
              class="mantine-1cwybh2 mantine-Input-rightSection mantine-NumberInput-rightSection"
            >
              <div
                class="mantine-1mzslog mantine-NumberInput-rightSection"
              >
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlUp mantine-f73we9"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    style="transform: rotate(180deg);"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
                <button
                  aria-hidden="true"
                  class="mantine-NumberInput-control mantine-NumberInput-controlDown mantine-1kz3j3d"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mantine-InputWrapper-root mantine-DatePicker-root mantine-1m3pqry"
        >
          <label
            class="mantine-InputWrapper-label mantine-DatePicker-label mantine-ittua2"
            for="mantine-rd"
            id="mantine-rd-label"
          >
            Delivery Date
            <span
              aria-hidden="true"
              class="mantine-u5apz8 mantine-InputWrapper-required mantine-DatePicker-required"
            >
               *
            </span>
          </label>
          <div
            class="mantine-2uofp0 mantine-DatePicker-wrapper"
          >
            <div
              class="mantine-Input-wrapper mantine-DatePicker-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="mantine-DatePicker-input mantine-Input-input mantine-DatePicker-input mantine-1v3u1sh"
                id="mantine-rd"
                name="date"
                placeholder="Pick date"
                readonly=""
                value="January 4, 2020"
              />
              <div
                class="mantine-163ph1f mantine-Input-rightSection mantine-DatePicker-rightSection"
              >
                <button
                  class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-tzgcu0"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 15 15"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="mantine-a9v14h"
          />
          <div
            class="mantine-Text-root mantine-1pbxw0k"
          >
            Address
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-rf"
              id="mantine-rf-label"
            >
              Street
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-rf"
                placeholder="Street"
                type="text"
                value="s1"
              />
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-rg"
              id="mantine-rg-label"
            >
              City
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-rg"
                placeholder="City"
                type="text"
                value="c2"
              />
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-rh"
              id="mantine-rh-label"
            >
              State
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-rh"
                placeholder="State"
                type="text"
                value="s1"
              />
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-ri"
              id="mantine-ri-label"
            >
              Country
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-ri"
                placeholder="Country"
                type="text"
                value="c1"
              />
            </div>
          </div>
          <div
            class="mantine-InputWrapper-root mantine-TextInput-root mantine-1m3pqry"
          >
            <label
              class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
              for="mantine-rj"
              id="mantine-rj-label"
            >
              Pincode
              <span
                aria-hidden="true"
                class="mantine-u5apz8 mantine-InputWrapper-required mantine-TextInput-required"
              >
                 *
              </span>
            </label>
            <div
              class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
            >
              <input
                aria-invalid="false"
                class="mantine-Input-input mantine-TextInput-input mantine-gqmpge"
                id="mantine-rj"
                placeholder="PinCode"
                type="number"
                value="123456"
              />
            </div>
          </div>
        </div>
        <button
          class="mantine-UnstyledButton-root mantine-Button-root mantine-axde23"
          data-button="true"
          type="submit"
        >
          <div
            class="mantine-3xbgk5 mantine-Button-inner"
          >
            <span
              class="mantine-qo1k2 mantine-Button-label"
            >
              Place Order
            </span>
          </div>
        </button>
        <div
          class="mantine-Text-root mantine-1pbxw0k"
        >
          No data Here!
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
